--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </nav>
     <main>
         <h2>Vacation Contest Sign-Up Form</h2>
-        <form> <!-- TODO: Set Action and Method Properties -->
+        <form method="GET" action="results.html"> <!-- TODO: Set Action and Method Properties -->
             <div>
                 <label for="firstname">Your First Name</label>
                 <input type="text" id="firstname" name="firstname">
@@ -128,8 +128,8 @@
                     <label for="pool">Pool</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="pool" name="pool" value="pool">
-                    <label for="pool">Pool</label>
+                    <input type="checkbox" id="hottub" name="hottub" value="hottub">
+                    <label for="hottub">Hot Tub</label>
                 </div>
             </fieldset>
             
