--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
         <h2>Vacation Contest Sign-Up Form</h2>
         <form method="GET" action="results.html"> <!-- TODO: Set Action and Method Properties -->
             <div>
-                <label for="firstname">Your First Name</label>
-                <input type="text" id="firstname" name="firstname">
+                <label for="firstname">Your First Name</label><span class="required-field">*</span>
+                <input type="text" id="firstname" name="firstname" required minlength="2" maxlength="35">
                 <!-- TODO: Create a "lastname" input with type "text" -->
-                <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname">
+                <label for="lastname">Your Last Name</label><span class="required-field">*</span>
+                <input type="text" id="lastname" name="lastname" minlength="2" maxlength="35" required>
+                <label for="age">Your Age</label>
+                <input type="number" name="age" id="age" min="21" max="120">
+                <h5>You must be 21 or older to enter the contest.</h5>
+                <label for="password">Your Secret Code</label><span class="required-field">*</span>
+                <input type="password" name="password" id="password" pattern="[a-zA-Z0-9]{6}" title="6 Alphanumeric Character Passcode" required>
             </div>
 
             <fieldset>
             <!-- TODO: Make fieldset and legend -->
             <legend>Your Contact Information</legend>
             <!-- Todo: Email Input -->
-            <label for="email">Your Email</label>
-            <input type="email" id="email" name="email">
+            <label for="email">Your Email</label><span class="required-field">*</span>
+            <input type="email" id="email" name="email" required>
             <!-- Todo: Street Address Input -->
             <label for="address">Street Address</label>
             <input type="text" id="address" name="address">
@@ -35,7 +40,8 @@
             <input type="text" id="city" name="city">
             
             <label for="state">State</label>
-            <select name="state"> 
+            <input name="state" list="state-list">
+            <datalist id="state-list"> 
                 <option value="AL">Alabama</option>
                 <option value="AK">Alaska</option>
                 <option value="AZ">Arizona</option>
@@ -85,10 +91,10 @@
                 <option value="WI">Wisconsin</option>
                 <option value="WV">West Virginia</option>
                 <option value="WY">Wyoming</option>
-            </select>
+            </datalist>
 
             <label for="zip">Zip Code</label>
-            <input type="text" id="zip" name="zip">
+            <input type="text" id="zip" name="zip" title="5-Digit US Zip Code" pattern="[0-9]{5}">
             </fieldset>
             <!-- TODO: Second fieldset -->
             <!-- TODO: Radio buttons for selecting preferred destination -->
@@ -96,7 +102,7 @@
                 <legend>Your Preferences</legend>
                 <h3>Choose your location</h3>
                 <div>
-                    <input type="radio" id="aruba" name="location" value="Aruba"> 
+                    <input type="radio" id="aruba" name="location" value="Aruba" checked="checked"> 
                     <label for="aruba">Aruba</label>
                 </div>
                 <div>
@@ -120,7 +126,7 @@
             <!-- TODO: Checkboxes for selecting extra add-ons -->
                 <h3>Choose your amenities.</h3>
                 <div>
-                    <input type="checkbox" id="sauna" name="sauna" value="sauna">
+                    <input type="checkbox" id="sauna" name="sauna" value="sauna" checked="checked">
                     <label for="sauna">Sauna</label>
                 </div>
                 <div>
